// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tooltip renders tooltip states dark 1`] = `
<span
  className="dark"
>
  <span
    className="Tooltip"
    style={
      Object {
        "left": "0px",
        "width": "210px",
      }
    }
  >
    <span
      className="Tip"
    />
    <div
      className="Content"
    >
      content test
    </div>
  </span>
</span>
`;

exports[`Tooltip renders tooltip states dark 2`] = `
<span
  className="Activator"
  onMouseOut={[Function]}
  onMouseOver={[Function]}
>
  Hola!
</span>
`;

exports[`Tooltip renders tooltip states top left and offset 1`] = `
<span
  className="top left"
>
  <span
    className="Tooltip"
    style={
      Object {
        "right": "10px",
        "width": "210px",
      }
    }
  >
    <span
      className="Tip"
    />
    <div
      className="Content"
    >
      content test
    </div>
  </span>
</span>
`;

exports[`Tooltip renders tooltip states top left and offset 2`] = `
<span
  className="Activator"
  onMouseOut={[Function]}
  onMouseOver={[Function]}
>
  Hola!
</span>
`;

exports[`Tooltip renders tooltip states with a width 1`] = `
<span
  className=""
>
  <span
    className="Tooltip"
    style={
      Object {
        "left": "0px",
        "width": "100px",
      }
    }
  >
    <span
      className="Tip"
    />
    <div
      className="Content"
    >
      content test
    </div>
  </span>
</span>
`;

exports[`Tooltip renders tooltip states with a width 2`] = `
<span
  className="Activator"
  onMouseOut={[Function]}
  onMouseOver={[Function]}
>
  Hola!
</span>
`;

exports[`Tooltip should render overlay 1`] = `
<Fragment>
  <WindowEvent
    event="resize"
    handler={[Function]}
  />
  <WindowEvent
    event="scroll"
    handler={[Function]}
  />
  <span
    className="Activator"
    onMouseOut={[Function]}
    onMouseOver={[Function]}
  >
    Hola!
  </span>
  <Portal
    containerId="foo"
  >
    <div
      className="TooltipOverlay"
      style={
        Object {
          "height": undefined,
          "left": NaN,
          "top": NaN,
          "width": undefined,
        }
      }
    >
      <span
        className=""
      >
        <span
          className="Tooltip"
          style={
            Object {
              "left": "0px",
              "width": "210px",
            }
          }
        >
          <span
            className="Tip"
          />
          <div
            className="Content"
          >
            content test
          </div>
        </span>
      </span>
    </div>
  </Portal>
</Fragment>
`;
